--- a/templates/label/show.html.twig
+++ b/templates/label/show.html.twig
@@ -97,7 +97,7 @@
                                                             {% endif %}
                                                         </td>
                                                         <td>
-                                                            <a href="{{ path('app_message_index', {'issueId': issue.id}) }}" class="btn btn-outline-primary btn-sm">
+                                                            <a href="{{ path('app_messages', {'issueId': issue.id}) }}" class="btn btn-outline-primary btn-sm">
                                                                 <i class="bi bi-eye"></i> View
                                                             </a>
                                                         </td>
